Move URL config to XML layout

--- a/view/adminhtml/layout/loki_admin_eav_entity_type_index_grid.xml
+++ b/view/adminhtml/layout/loki_admin_eav_entity_type_index_grid.xml
@@ -13,6 +13,7 @@
                 template="Yireo_LokiAdminComponents::grid.phtml">
                 <arguments>
                     <argument name="provider" xsi:type="string">Magento\Eav\Model\ResourceModel\Entity\Type\Collection</argument>
+                    <argument name="allow_actions" xsi:type="boolean">false</argument>
                 </arguments>
             </block>
         </referenceContainer>
