--- a/view/adminhtml/layout/loki_admin_eav_entity_type_index_grid.xml
+++ b/view/adminhtml/layout/loki_admin_eav_entity_type_index_grid.xml
@@ -10,7 +10,7 @@
         <referenceContainer name="content">
             <block
                 name="loki_admin_eav_entity_type.grid"
-                template="Yireo_LokiAdminComponents::grid.phtml">
+                template="Loki_AdminComponents::grid.phtml">
                 <arguments>
                     <argument name="provider" xsi:type="string">Magento\Eav\Model\ResourceModel\Entity\Type\Collection</argument>
                     <argument name="allow_actions" xsi:type="boolean">false</argument>
