Change flag allow_actions into hide_actions

--- a/view/adminhtml/layout/loki_admin_eav_entity_type_index_grid.xml
+++ b/view/adminhtml/layout/loki_admin_eav_entity_type_index_grid.xml
@@ -13,7 +13,7 @@
                 template="Loki_AdminComponents::grid.phtml">
                 <arguments>
                     <argument name="provider" xsi:type="string">Magento\Eav\Model\ResourceModel\Entity\Type\Collection</argument>
-                    <argument name="allow_actions" xsi:type="boolean">false</argument>
+                    <argument name="hide_actions" xsi:type="boolean">true</argument>
                 </arguments>
             </block>
         </referenceContainer>
