Allow setting visible flag on grid column

--- a/view/adminhtml/layout/loki_admin_eav_entity_type_index_grid.xml
+++ b/view/adminhtml/layout/loki_admin_eav_entity_type_index_grid.xml
@@ -14,6 +14,11 @@
                 <arguments>
                     <argument name="provider" xsi:type="string">Magento\Eav\Model\ResourceModel\Entity\Type\Collection</argument>
                     <argument name="hide_actions" xsi:type="boolean">true</argument>
+                    <argument name="columns" xsi:type="array">
+                        <item name="increment_pad_char" xsi:type="array">
+                            <item name="visible" xsi:type="boolean">false</item>
+                        </item>
+                    </argument>
                 </arguments>
             </block>
         </referenceContainer>
